--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=To-Do-Application
+
+# This is way of connectivity format
+#spring.datasource.url=<>:<>:<>/<db-name>
+spring.datasource.url=jdbc:mysql://localhost:3306/todoapp
+spring.datasource.username=root
+spring.datasource.password=Maha@2006
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
